<resources>
    <string name="app_name">Language_app</string>
    <string name="signup">Sign Up</string>
    <string name="save">Save</string>
    <string name="dark">dark</string>
    <string name="light">light</string>
    <string name="who_is_image">Who is on the image?</string>
    <string name="monkey">monkey</string>
    <string name="hen">hen</string>
    <string name="intro1">With conversation-based learning, you will learn to  talk from first lesson</string>
    <string name="intro2">Develop a habit of learning and make it a part of your daily life</string>
    <string name="intro3">Usе a variety of learning styles to learn and retain</string>
    <string name="check">Check</string>
    <string name="right">That is Right!</string>
    <string name="success">Success</string>
    <string name="failure">Failure</string>
    <string name="change_image">Change your image</string>
    <string name="dolphin">dolphin</string>
    <string name="hello">Hello!</string>
    <string name="learning_today">Are you ready for learning today?</string>
    <string name="onboarding_1_next_button">Next</string>
    <string name="onboarding_2_more_button">More</string>
    <string name="available_exercise">Available exercises</string>
    <string name="top_users">Top users</string>
    <string name="onboarding_3_choose_lang_button">Choose a language</string>
    <string name="skip_onboarding">Skip onboarding</string>
    <string name="choose_lang_title">Language select</string>
    <string name="whats_your_language">Select your origin language</string>
    <string name="russian">Russian</string>
    <string name="english">English</string>
    <string name="choose">Choose</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="loginTextView1">Join now for free and start learning curve!</string>
    <string name="loginEmail">Email</string>
    <string name="loginPass">Passcode</string>
    <string name="confirmPass">Confirm</string>
    <string name="wrong_raise">Wrong answer!</string>
    <string name="firstName">Name</string>
    <string name="lastName">Last Name</string>
    <string name="Continue">Continue</string>
    <string name="guess_the_animal">Guess the animal</string>
    <string name="next">Next</string>
    <string name="try_again">Try again?</string>
    <string name="word_practice">Word practice</string>
    <string name="listening">Listening</string>
    <string name="passwordforgot">Forgot Password</string>
    <string name="title_intro3">The lessons you need to learn</string>
    <string name="title_intro2">Take your time to learn</string>
    <string name="title_intro1">Confidence in your words</string>
</resources>
