<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/background"
    android:layout_height="match_parent"
    tools:context=".Profile">

    <Button
        android:id="@+id/changeLangButton"
        android:layout_width="313dp"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/button_rounded_blue"
        android:fontFamily="@font/fredoka_condensed_bold"
        android:text="@string/whats_your_language"
        android:textColor="@color/whiteone"
        app:layout_constraintBottom_toTopOf="@+id/changeImageButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/saveButton"
        android:layout_width="313dp"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:textColor="@color/whiteone"
        android:background="@drawable/button_rounded_blue"
        android:fontFamily="@font/fredoka_condensed_bold"
        android:text="@string/save"
        app:layout_constraintBottom_toTopOf="@+id/changeLangButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/themeButton"
        android:layout_width="313dp"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/button_rounded_blue"
        android:fontFamily="@font/fredoka_condensed_bold"
        android:text="@string/save"
        android:textColor="@color/whiteone"
        app:layout_constraintBottom_toTopOf="@+id/saveButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/changeImageButton"
        android:layout_width="313dp"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/button_rounded_blue"
        android:fontFamily="@font/fredoka_condensed_bold"
        android:text="@string/change_image"
        android:textColor="@color/whiteone"
        app:layout_constraintBottom_toTopOf="@+id/choose_button5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/choose_button5"
        android:layout_width="313dp"
        android:layout_height="0dp"
        android:layout_marginBottom="28dp"
        android:background="@drawable/button_rounded_gray"
        android:fontFamily="@font/fredoka_condensed_bold"
        android:text="@string/logout"
        android:textColor="@color/whiteone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/topAppBarLogin"
        android:layout_width="413dp"
        android:layout_height="222dp"
        android:background="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </com.google.android.material.appbar.MaterialToolbar>

    <TextView
        android:id="@+id/textView21"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="28dp"

        android:layout_marginTop="172dp"
        android:fontFamily="@font/fredoka_condensed_bold"
        android:text="@string/hello"
        android:textColor="@color/black"

        android:textSize="22dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/topAppBarLogin" />

    <ImageView
        android:id="@+id/imageAvatar2"
        android:layout_width="134dp"
        android:layout_height="134dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/gray_circle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </ImageView>

</androidx.constraintlayout.widget.ConstraintLayout>