<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/background"
    android:layout_height="match_parent"
    tools:context=".Onboarding_2">

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="215dp"
        android:layout_height="256.63dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.169">

    </ImageView>

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="40dp"
        android:layout_height="8dp"
        android:layout_marginTop="92dp"
        android:background="@drawable/progress_bar_2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView5">

    </ImageView>

    <TextView
        android:id="@+id/textView24"
        android:textColor="@color/black"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="124dp"
        android:fontFamily="@font/fredoka_condensed_bold"
        android:text="@string/title_intro2"
        android:textSize="22dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView5">

    </TextView>

    <TextView
        android:id="@+id/textView23"
        android:layout_width="260dp"
        android:layout_height="80dp"
        android:layout_marginTop="52dp"
        android:gravity="center"
        android:text="@string/intro2"
        android:textColor="@color/black"
        android:textSize="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView6">

    </TextView>

    <Button
        android:id="@+id/button"
        android:layout_width="313dp"
        android:layout_height="0dp"
        android:layout_marginBottom="104dp"
        android:background="@drawable/button_rounded_blue"
        android:fontFamily="@font/fredoka_condensed_bold"
        android:text="@string/onboarding_2_more_button"
        android:textColor="@color/whiteone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:textColor="@color/black"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/fredoka_condensed_bold"
        android:text="@string/skip_onboarding"
        android:textSize="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button" />

</androidx.constraintlayout.widget.ConstraintLayout>